--- a/styles/unmin/light-modern-unmin.css
+++ b/styles/unmin/light-modern-unmin.css
@@ -50,6 +50,7 @@ nav ul li a {
 .footer {
     position: fixed;
     right: 0;
+    left: 0;
 }
 body,
 html {
@@ -68,6 +69,8 @@ aside {
     width: 200px;
     background-color: #2c3e50;
     padding: 20px;
+    width: 200px;
+    text-align: center;
 }
 #logo {
     max-width: 100%;
@@ -214,42 +217,6 @@ p {
 .footer a {
     color: #333;
 }
-@media (max-width: 768px) {
-    .main-content,
-    aside {
-        width: 100%;
-    }
-    aside,
-    main {
-        padding: 10px;
-    }
-    #launcher {
-        flex-direction: column;
-    }
-    aside {
-        height: auto;
-    }
-    aside h2 {
-        font-size: 1.2em;
-    }
-    nav ul li a {
-        padding: 8px;
-        font-size: 0.9em;
-    }
-    #play-bar {
-        left: 0;
-        bottom: 30px;
-    }
-    .footer {
-        font-size: 0.7em;
-        padding: 5px;
-    }
-    #client-settings,
-    #launcher-settings {
-        width: 90%;
-        max-width: none;
-    }
-}
 .larger {
     display: flex;
     justify-content: center;
@@ -264,11 +231,6 @@ a:hover {
 #sidebar {
     transition: transform 0.3s ease;
 }
-
-#sidebar.collapsed {
-    transform: translateX(-100%);
-}
-
 #toggle-button {
     position: fixed;
     top: 20px;
@@ -280,18 +242,6 @@ a:hover {
     font-size: 24px;
     color: #fff;
 }
-
-@media (max-width: 768px) {
-    #sidebar {
-        transform: translateY(-100%);
-        width: 100%;
-    }
-
-    #sidebar.collapsed {
-        transform: translateY(0);
-    }
-}
-
 .legal-submenu {
     display: none;
     padding-left: 20px;
@@ -328,4 +278,9 @@ a {
 }
 a:hover {
     color: #16a085;
+}
+img {
+  display: block;
+  margin: 0 auto;
+  border-radius:5px;
 }
